httpCookieStore.getAllCookies() does not always call completion block https://bugs.webkit.org/show_bug.cgi?id=188242

Reviewed by Chris Dumez.

Take background assertion for network process to keep it alive during cookieStore API calls.

* UIProcess/GenericCallback.h:
* UIProcess/WebCookieManagerProxy.cpp:
(WebKit::WebCookieManagerProxy::getHostnamesWithCookies):
(WebKit::WebCookieManagerProxy::deleteCookie):
(WebKit::WebCookieManagerProxy::deleteAllCookiesModifiedSince):
(WebKit::WebCookieManagerProxy::setCookie):
(WebKit::WebCookieManagerProxy::setCookies):
(WebKit::WebCookieManagerProxy::getAllCookies):
(WebKit::WebCookieManagerProxy::getCookies):
(WebKit::WebCookieManagerProxy::setHTTPCookieAcceptPolicy):
(WebKit::WebCookieManagerProxy::getHTTPCookieAcceptPolicy):


Canonical link: https://commits.webkit.org/203385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234518 268f45cc-cd09-0410-ab3c-d52691b4dbfc